styles.css
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Gravitas+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Macondo&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');


* {
    color: black;
    font-family: "Lato", sans-serif;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

h1, h2, h3, h4, h5, h6, span {
    color: #242424;
    text-align: center;
    line-height: 1.25;
}

h1 {
    font-size: 36px;
}

p {
    line-height: 1.5;
    font-size: 16px;
}

a {
    text-decoration: none;
    position: relative;
    transition: opacity 300ms ease;
}

i:hover {
    opacity: 0.7;
}

.link__hover-effect{
    position: relative;
}
.link__hover-effect:after {
    content: "";
    position: absolute;
    height: 3px;
    width: 0;
    bottom: -3px;
    right: 0;
    transition: all 300ms ease;
}

.link__hover-effect--purple:after {
    background-color: #6030b1;
}

.link__hover-effect:hover:after {
    width: 100%;
    left: 0;
}

li{
    list-style-type: none;
}

.flex {
    display: flex;
}

.flex-1 {
    flex: 1;
}

.container {
    padding: 50px 0;
}

.row {
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
    padding: 0 12px;
}

.text--purple {
    color: #6030b1;
}

section:nth-child(even) {
    background-color: #f8f8f8;
}

.section__title {
    margin-bottom: 20px;
}

/* NAVIGTION BAR*/

nav {
    height: 100px;
    width: 100%;
    max-width: 1000px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 12px;
}

.nav__link--list {
    display: flex;
}

.nav__link--anchor {
    margin: 0 12px;
    color: #242424;
    font-weight: 700;
}

.nav__link--anchor-primary {
    background-color: #6030b1;
    padding: 8px 20px;
    border-radius: 50px;
    color: white;
    transition: all 300ms ease;
}

.nav__link--anchor-primary:hover {
    background-color: #5d3eff;
}

.personal__logo {
    font-size: 24px;
    color: #6030b1;
    margin: 0 12px;
    font-weight: bold;
}

/* ABOUT ME */

#about-me {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.about-me__info {
    display: flex;
    flex-direction: column;
}

.about-me__info--container {
    display: flex;
    flex-direction: column;
    align-items: center; 
    max-width: 600px;
    margin: 0 auto;
    text-align: center;
}

.about-me__picture--mask {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    overflow: hidden;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
    margin-bottom: 28px;
    animation: animate-profile-picture 800ms 200ms backwards;
}

@keyframes animate-profile-picture {
    0% {
        transform: scale(0);
    }
    80% {
        transform: scale(1.1);
    }
    100% {
        transform: scale(1);
    }
}

.about-me__picture {
    width: 100%;

/* Improving my own picture */
transform: scale(1.5);
padding-top: 8px;
}

.about-me__info--title {
    margin-bottom: 16px;
    animation: fade-up 650ms 400ms backwards;
}

.about-me__info--para {
    font-size: 20px;
    margin-bottom: 28px;
    animation: fade-up 650ms 600ms backwards;
}

.about-me__link {
    font-size: 20px;
    color: #242424;
    padding: 0 16px;
     margin-bottom: 20px;
     animation: fade-up 650ms 600ms backwards;
}

.about-me__link {
    animation: fade-up 650ms 600ms backwards;
}

@keyframes fade-up {
    0% {
        opacity: 0;
        transform: translateY(40px)
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}              

.about-me__img--container {
    flex: 1;
    align-items: center;
}

.about-me__img {
    width: 100%;
        animation: fade-in 1200ms 800ms backwards;
}

@keyframes fade-in{
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.wave {
    display: inline-block;
    animation: animate-wave 500ms infinite ease-in-out;
}

@keyframes animate-wave {
    0% {
        transform: rotate(0);
    }
    50% {
        transform: rotate(30deg);
    }
    100% {
        transform: rotate(0);
    }
}

/* TECH - STACK */

.language__img {
    width: 100%;
    max-width: 100px;
    transform: all 300ms;
}

.language:hover .language__img {
    filter: brightness(80%);
    opacity: 0.86;
    transform: scale(0.9);
}

.language {
    width: 25%;
    display: flex;
    justify-content: center;
    position: relative;
}

.language__img--wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 25px 16px;
}

.languages__list {
    display: flex;
    justify-content: center;
    width: 100%;
    flex-wrap: wrap;
}

.language__name {
    position: absolute;
    bottom: 0;
    transform: scale(0);
    transition: all 300ms;
    font-size: 20px;
    opacity: 0;
}

.language:hover .language__name {
    transform: scale(1);
    opacity: 1;
}

/* PROJECTS */

.project {
    margin-bottom: 135px;
}

.project:last-child {
    margin-bottom: 40px;
}

.project__img {
    width: 100%;
    transition: all 500ms ease;
    }

.project__wrapper {
    display: flex;
    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
    border-radius: 20px;
    overflow: hidden;
    position: relative;
} 

.project__wrapper:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #1c1d25;
    opacity: 0;
    transition: opacity 450ms ease;
    z-index: 2;
}

.project:hover .project__wrapper:before {
    opacity: 0.7;
}

.project:hover .project__img {
    transform: scale(1.07);
    filter: blur(5px);
}

.project:hover .project__description {
    opacity: 1;
    transform: translateY(-50%);
}

.project__list {
    padding-top: 40px;
}

.project__description {
    position: absolute;
    top: 50%;
    left: 90px;
    transform: translateY(100%);
    max-width: 550px;
    z-index: 3;
    opacity: 0;
    transition: transform 450ms, opacity 300ms;
}

.project__description--title{
    font-size: 40px;
}

.project__description--para {
    margin: 16px 0;
}

.project__description--link {
    font-size: 20px;
    margin-right: 16px;
}

.project__description--title,
.project__description--sub-title,
.project__description--para,
.project__description--link {
    text-align: left;
    color: #fff;
}

/* FOOTER */

footer {
    background-color: #f8e5fa;
}

.footer__social--list {
    width: 100%;
    max-width: 500px;
    display: flex;
    justify-content: space-around;
    margin-bottom: 28px;
}

.footer__row {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 8% 0;
}

.footer__logo--img {
    width: 80px;
    height: 80px;
}

.footer__social--link,
.footer__copyright,
.footer__logo--popper {
     color: #591378;
}

.footer__logo--popper {
    position: absolute;
    right: 0;
    top: 30px;
    font-weight: 700;
    opacity: 0;
    transition: all 300ms ease;
}

.footer__anchor {
    margin-bottom: 20px;
    position: relative;
}

.footer__anchor:hover 
.footer__logo--popper {
    opacity: 1;
    transform: translateX(60px);
}

/* Small Phones, Tablets, Large Smartphones */

@media (max-width: 768px) {
    nav {
        height: 68px;
    }

    h1 {
        font-size: 28px;
    }
.about-me__info--para {
    font-size: 18px;
}

.language {
    width: calc(100%/3);
}

.project__description--para {
    font-size: 14px;
}   

.project__description {
    left: 30px;
    padding-right: 30px;
}
}

/* Small Phones*/

@media (max-width: 480px) {
    .nav__link:not(:last-child) {
        display: none;
    }

    .project__description {
        padding: 0;
        left: 0;
        width: 100%;
    }

    .project__description--para {
        display: none;
    }

    .project__description--links {
        display: flex;
        justify-content: center;
    }

    .project__description--title {
        font-size: 32px;
        line-height: 1;
        text-align: center;
    }

    .project__description--sub-title {
        text-align: center;
        margin: 12px 0;
    }
}

